Finishing auth screen layout

--- a/src/app/core/components/auth/pages/signin/signin.component.html
+++ b/src/app/core/components/auth/pages/signin/signin.component.html
@@ -1,1 +1,20 @@
-<p>signin works!</p>
+<div class="container">
+  <img src="assets/images/angular-logo.png" alt="Angular logo" />
+
+  <h1>Login to the platform</h1>
+
+  <form>
+    <label>
+      <img src="assets/images/email.svg" alt="Email icon" />
+      <input type="email" placeholder="Type your email address..." />
+    </label>
+    <label>
+      <img src="assets/images/password.svg" alt="Password icon" />
+      <input type="password" placeholder="Enter your password..." />
+    </label>
+
+    <button class="btn-red">SignIn</button>
+  </form>
+
+  <span class="alert">Invalid credentials</span>
+</div>
