Implements signIn and signOut

--- a/src/app/components/admin/pages/home/home.component.html
+++ b/src/app/components/admin/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
   <img src="assets/images/angular-logo.png" alt="Angular logo" />
   <h2>SignIn successful!</h2>
-  <button class="btn-red">LogOut</button>
+  <button class="btn-red" (click)="signOut()">SignOut</button>
 </div>
