--- a/src/app/core/components/auth/pages/signin/signin.component.html
+++ b/src/app/core/components/auth/pages/signin/signin.component.html
@@ -24,5 +24,5 @@
     <button class="btn-red" [disabled]="formAuth.invalid">SignIn</button>
   </form>
 
-  <span class="alert" *ngIf="msgError">Invalid credentials</span>
+  <span class="alert" *ngIf="msgError">{{ msgError }}</span>
 </div>
